# dlstreamer

./: CMakeLists.txt
dev_scripts/: build_dlstreamer.sh  example_expected.json  example_xml.xml  metaconvert_onvif_cl_out.json  metaconvert_onvif_out.json  metaconvert_onvif_out_py.json  metaconvert_test.sh  metaconvert_test2.sh  metaconvert_test3.sh  metaconvert_test_out.json  onvif_xml_to_json.py
gst/elements/gvametaconvert/: converters.cpp  converters.h  gstgvametaconvert.c  gstgvametaconvert.h  onvifconverter.cpp  onvifconverter.h
gst/elements/gvametapublish/: CMakeLists.txt  gvametapublish.cpp  gvametapublish.hpp
gst/elements/gvametapublish/base/: common.hpp
gst/elements/gvametapublish/pravega/: CMakeLists.txt  gvametapublishpravega.cpp  gvametapublishpravega.hpp
gst/elements/gvawatermark/: gstgvawatermarkimpl.cpp
